tests/negative/syntax_errors/003_missing_paren.c
// TEST: missing_paren
// DESCRIPTION: Missing closing parenthesis
// EXPECT_COMPILE_FAIL: yes
// ERROR_PATTERN: expected ')'
// PHASE: 1

int main(void {
    return 0;
}
